Додано нову статтю до blog.html: Чому люди обирають страждання замість змін?

--- a/blog.html
+++ b/blog.html
@@ -130,6 +130,37 @@
     }
     return gk_fileData[filename] || "";
     }
+</script><script type="text/javascript">
+    var gk_isXlsx = false;
+    var gk_xlsxFileLookup = {};
+    var gk_fileData = {};
+    function filledCell(cell) {
+      return cell !== '' && cell != null;
+    }
+    function loadFileData(filename) {
+    if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
+        try {
+            var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
+            var firstSheetName = workbook.SheetNames[0];
+            var worksheet = workbook.Sheets[firstSheetName];
+            var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
+            var filteredData = jsonData.filter(row => row.some(filledCell));
+            var headerRowIndex = filteredData.findIndex((row, index) =>
+              row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
+            );
+            if (headerRowIndex === -1 || headerRowIndex > 25) {
+              headerRowIndex = 0;
+            }
+            var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex));
+            csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
+            return csv;
+        } catch (e) {
+            console.error(e);
+            return "";
+        }
+    }
+    return gk_fileData[filename] || "";
+    }
 </script><!DOCTYPE html>
 <html lang="uk">
 <head>
@@ -300,14 +331,10 @@
                     const content = this.nextElementSibling;
                     const icon = this.querySelector('.accordion-icon');
                     const isActive = content.classList.contains('active');
-
-                    // Закриваємо всі інші акордеони
                     document.querySelectorAll('.accordion-content').forEach(content => {
                         content.classList.remove('active');
                         content.previousElementSibling.querySelector('.accordion-icon').textContent = '+';
                     });
-
-                    // Відкриваємо/закриваємо поточний
                     if (!isActive) {
                         content.classList.add('active');
                         icon.textContent = '−';
@@ -373,7 +400,7 @@
                 <div class="accordion-content">
                     <p><strong>🤔 Думаєш, архетипи — це щось для кабінетних психологів, фентезійних персонажів чи духовних гуру?</strong><br>Ні.<br>Архетипи — це повсякденність у найчистішому вигляді.<br>Це ти, коли приймаєш рішення. Коли жартуєш. Коли зриваєшся. Коли підтримуєш. Коли тікаєш.<br>Архетип — це не те, у що треба “вірити”.<br>Це те, що працює, навіть коли ти про нього не знаєш.</p>
                     <p><strong>🧍‍♂️ Вранці: хто тебе будить?</strong><br>· Якщо зриваєшся з ліжка зі словами “світ чекає, а я його лопатою” — це Герой.<br>· Якщо думаєш “що за абсурд знову в цьому житті?” — Трікстер усміхається.<br>· Якщо повільно відкриваєш одне око і шепочеш “хочу тиші й кави” — вітаю, Кішка прокидається.</p>
-                    <p><strong>☕ Під час розмов з людьми:</strong><br>· Ти слухаєш, приймаєш, даєш пораду — Опікун.<br>· Витягуєш суть, відкидаєш воду — Мудрець.<br>· Піджартовуєш, провокуєш, але не зламано — Трікстер знову в грі.<br>· Тебе дратує чужа безпорадність, і хочеться все вирішити самому — Герой перевтомлений.</p>
+                    <p><strong>☕ Під час розмов з людьми:</strong><br>· Ти слухаєш, приймаєш, даєш пораду — Опікун.<br>· Витягуєш суть, відкидаєш воду — Мудрець.<br>· Піджартовуєш, провокуєш, але не зламіно — Трікстер знову в грі.<br>· Тебе дратує чужа безпорадність, і хочеться все вирішити самому — Герой перевтомлений.</p>
                     <p><strong>🧱 На роботі чи вдома:</strong><br>· Якщо тебе знову використовують, і ти мовчки терпиш — Опікун у тіні.<br>· Якщо хочеш усе спалити й виїхати в Карпати — Бунтар нервово курить у кутку.<br>· Якщо зробив каву, вдягнув навушники і зник — Мандрівник в офісному тілі.<br>· Якщо знову вирішив подивитися відео про зміст життя і третє око — Маг наближається.</p>
                     <p><strong>💬 У діалогах:</strong><br>· “Я знаю, як буде краще.” — це Мудрець, що трохи загрався.<br>· “Я ж тобі казав, а ти…” — це Тінь Опікуна + шматочок Криси.<br>· “А давай уявимо, що ми вже на даху світу і танцюємо?” — Любовник у чистому вигляді.<br>· “Не чіпайте мене, я просто хочу бути.” — Кішка. Завжди.</p>
                     <p><strong>📌 А тепер найголовніше:</strong><br>Ці прояви — не “ролі” і не “характер”. Це архетипи.<br>І вони не фіксовані. Ти можеш бути Героєм зранку, Мудрецем у розмові, Трікстером у коментарях і Кішкою ввечері з чашкою чаю.<br>Це нормально.</p>
@@ -570,6 +597,91 @@
                     <p>І коли ти починаєш з нею працювати, як з інструментом, а не як з центром всесвіту — о, тоді починається найцікавіше.</p>
                     <p>Бо відкривається дверцята.</p>
                     <p>І ти вже не Вася, а хтось, хто пам’ятає більше, ніж учора.</p>
+                </div>
+            </div>
+
+            <!-- Стаття 6 (нова) -->
+            <div class="accordion-item">
+                <div class="accordion-header">
+                    <h3>Чому люди обирають страждання замість змін?</h3>
+                    <span class="accordion-icon">+</span>
+                </div>
+                <div class="accordion-content">
+                    <p><em>Дата: 24 травня 2025</em></p>
+                    <p>Це не просто психологія.</p>
+                    <p>Це вже філософія болю з елементами трагедії і театру абсурду.</p>
+                    <p>Бо, здавалося б, усе просто:</p>
+                    <p>Страждаєш — змінюй.</p>
+                    <p>Погано живеш — дій.</p>
+                    <p>Нещасний — шукай вихід.</p>
+                    <p>Але ні.</p>
+                    <p>Багато хто воліє залишатися у знайомому болі, ніж ступити у невідоме — навіть якщо там краще.</p>
+                    <p>________________________________________</p>
+                    <p><strong>Чому так?</strong></p>
+                    <p>________________________________________</p>
+                    <p><strong>1. Страждання — знайоме. А зміни — страшні</strong></p>
+                    <p>Краще знайоме болото, ніж невідомий берег.</p>
+                    <p>Людина роками живе в болі, але навчилась в ньому виживати.</p>
+                    <p>А зміни — це відповідальність, вибір, нова роль.</p>
+                    <p>А це вже страшно.</p>
+                    <p>________________________________________</p>
+                    <p><strong>2. Страждання — це виправдання</strong></p>
+                    <p>“Я б і зробив, та ж бачиш — не час, не ті умови…”</p>
+                    <p>Коли ти страждаєш — ти вже ніби дієш, хоча насправді просто терпиш.</p>
+                    <p>Це така внутрішня індульгенція:</p>
+                    <p>“Я страждаю — значить, намагаюсь.”</p>
+                    <p>________________________________________</p>
+                    <p><strong>3. Страждання — це соціальна валюта</strong></p>
+                    <p>“У всіх важко, нічого страшного. Потерпи.”</p>
+                    <p>Коли тобі боляче — тебе жаліють. Підтримують. Не чіпають.</p>
+                    <p>А от як тільки ти починаєш змінюватися —</p>
+                    <p>тебе або не розуміють, або бояться, або знецінюють:</p>
+                    <p>“Що це ти такий особливий став?”</p>
+                    <p>“Іди працюй, не вигадуй.”</p>
+                    <p>“Не грайся з долею.”</p>
+                    <p>________________________________________</p>
+                    <p><strong>4. Страждання — це ідентичність</strong></p>
+                    <p>“Я — жертва, мученик, той, кому не щастить.”</p>
+                    <p>Це роль. Образ. Захисна маска.</p>
+                    <p>І навіть якщо вона болюча — вона зрозуміла й звична.</p>
+                    <p>Без неї — порожнеча.</p>
+                    <p>________________________________________</p>
+                    <p><strong>5. І головне: “Я не вартий кращого”</strong></p>
+                    <p>“У мене не вийде. Це не для мене. Таке не буває зі мною.”</p>
+                    <p>Це найглибше.</p>
+                    <p>Це не думка — це переконання.</p>
+                    <p>Сформоване ще з дитинства, з досвіду, з чужих слів:</p>
+                    <p>“Ти нічого не досягнеш.”</p>
+                    <p>“Це не для тебе.”</p>
+                    <p>“Заспокойся, мрійник.”</p>
+                    <p>І от людина виросла — а переконання залишились.</p>
+                    <p>І вона не дозволяє собі вилізти з ями. Бо вірить, що яма — її місце.</p>
+                    <p>________________________________________</p>
+                    <p><strong>То що з цим робити?</strong></p>
+                    <p>Не боротися з усім одразу.</p>
+                    <p>Не знищувати свою стару роль.</p>
+                    <p>Не кричати “треба все змінити!”</p>
+                    <p>Почати з малого:</p>
+                    <ul>
+                        <li>Почути себе.</li>
+                        <p>Де тобі боляче? Де ти вже не можеш? Де ти втомився мовчати?</p>
+                        <li>Сказати собі правду.</li>
+                        <p>Не світові. Не іншим. Лише собі.</p>
+                        <li>Дозволити собі хоча б уявити інший варіант.</li>
+                        <p>Не досконалий. Просто інший. Де трохи легше. Де трохи вільніше.</p>
+                        <li>Зробити маленький рух.</li>
+                        <p>Один. Будь-який. Але в напрямку світла, а не гниття.</p>
+                    </ul>
+                    <p>________________________________________</p>
+                    <p><strong>І не чекати підтримки</strong></p>
+                    <p>Бо підтримка прийде потім. Або не прийде.</p>
+                    <p>І це нормально.</p>
+                    <p>Бо це твій вибір. Твій рух. Твоя сила.</p>
+                    <p>________________________________________</p>
+                    <p><strong>А найголовніше:</strong></p>
+                    <p>Ти вже не той, хто просто терпить.</p>
+                    <p>Ти — той, хто бачить, відчуває і шукає.</p>
+                    <p>А це вже дуже багато.</p>
                 </div>
             </div>
 
