--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-	<script type="text/javascript">
+<script type="text/javascript">
         var gk_isXlsx = false;
         var gk_xlsxFileLookup = {};
         var gk_fileData = {};
@@ -50,23 +50,46 @@
             var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
             var firstSheetName = workbook.SheetNames[0];
             var worksheet = workbook.Sheets[firstSheetName];
-
-            // Convert sheet to JSON to filter blank rows
             var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
-            // Filter out blank rows (rows where all cells are empty, null, or undefined)
             var filteredData = jsonData.filter(row => row.some(filledCell));
-
-            // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
             var headerRowIndex = filteredData.findIndex((row, index) =>
               row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
             );
-            // Fallback
             if (headerRowIndex === -1 || headerRowIndex > 25) {
               headerRowIndex = 0;
             }
-
-            // Convert filtered JSON back to CSV
-            var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
+            var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex));
+            csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
+            return csv;
+        } catch (e) {
+            console.error(e);
+            return "";
+        }
+    }
+    return gk_fileData[filename] || "";
+    }
+</script><script type="text/javascript">
+    var gk_isXlsx = false;
+    var gk_xlsxFileLookup = {};
+    var gk_fileData = {};
+    function filledCell(cell) {
+      return cell !== '' && cell != null;
+    }
+    function loadFileData(filename) {
+    if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
+        try {
+            var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
+            var firstSheetName = workbook.SheetNames[0];
+            var worksheet = workbook.Sheets[firstSheetName];
+            var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
+            var filteredData = jsonData.filter(row => row.some(filledCell));
+            var headerRowIndex = filteredData.findIndex((row, index) =>
+              row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
+            );
+            if (headerRowIndex === -1 || headerRowIndex > 25) {
+              headerRowIndex = 0;
+            }
+            var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex));
             csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
             return csv;
         } catch (e) {
@@ -200,9 +223,10 @@
             <h2>Контакти</h2>
             <p>Не соромся. Проходь. Тут свої.</p>
             <p>Напряму до мене — без посередників і форм з 2004 року:</p>
-            <p>Telegram: @Korvin57</p>
+            <p>Telegram: <a href="https://t.me/Korvin57">Korvin57</a></p>
             <p>Електронна пошта: korvin71@meta.ua</p>
             <p>Закритий канал: <a href="https://t.me/+mlK1hJzQynZhNDNi">Я Є — Приватна територія</a></p>
+            <p>Viber: <a href="https://invite.viber.com/?g2=AQAwUFfdXXe5AFS7oDnJs7%2FZ02KSLEr2CevCII2NO3%2FmWWvi%2F15POQq%2FwleRwAjh">Я Є — Viber-спільнота</a></p>
             <p>Якщо не відповів — значить читаю. Якщо довго не відповідаю — значить думаю. Якщо зовсім не відповів — можливо, ти не з того всесвіту. Але спробуй ще раз.</p>
 
             <h2>Акція для перших 100 учасників Telegram-каналу “Я є”</h2>
